Copying Heroku repository to final-project

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -89,6 +89,11 @@
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
+
+
+ footer {
+   background-color: #991208
+ }
  
  .jumbotron {
    width: 100%;
