--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <div class="logo-image">
               <img src="/static/Images/captain_marvel.png" class="img-fluid">
         </div>
-      <a class="nav-brand">
+      <a class="nav-brand" src="/static/Images/superman.png"></a>
       <a class="navbar-brand"> League of Avengers
         <a class="navbar-brand">
           <div class="logo-image">
@@ -31,7 +31,7 @@
       </button>
   
       <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link active" href="https://leagueofavengers.herokuapp.com">Home
               <span class="visually-hidden">(current)</span>
@@ -62,11 +62,21 @@
   </nav>
   <br>
   <br>
-    <div class="hero text-center img-fluid">
-        <img src="/static/Images/Marvel_vs_DC.png">
-    </div>  
-    <br>
     <div class="container">
+      <div class="row">
+        <div class="col-sm">
+      <iframe width="300" height="452.92" src="https://www.youtube.com/embed/g4qolFJImHc?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=1; gyroscope; picture-in-picture"></iframe>
+    </div>
+    <div class="col-sm-6">
+        <img class="img-fluid" src="/static/Images/Marvel_vs_DC.png" style="width: 625px; height:auto"></div>
+      <div class="col-sm">
+        <iframe width="300" height="452.92" src="https://www.youtube.com/embed/mN3oEnPzVNs?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=1; gyroscope; picture-in-picture"></iframe>
+      </div> 
+    </div> 
+  </div>
+  <br>
+  <div class="container">
+  <div class="row">
         <div class="col-md-12">
             <div class="card bg-primary; text-white">
                 <div class="card-body">
@@ -82,9 +92,19 @@
         </div>
     </div>
     </div>
+  </div>
   </body>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-
-
+  <br>
+  <br>
+  <footer class="site-footer">
+    <div class="container-fluid text-center text-md-left">
+        <div class="row">
+          <br>
+            <p class="text-white">"League of Avengers...Assemble!"</p>
+        </div>
+        <hr class="clearfix w-100 d-md-none pb-3">
+    </div>
+    <div class="footer-copyright text-center py-3"> <a class="text-white" href="https://github.com/AnaLindaPenny/final-project.git">Project Github</a>
+    </div>
+    </footer>  
 </html>
