--- a/templates/team.html
+++ b/templates/team.html
@@ -31,10 +31,9 @@
       </button>
   
       <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="https://leagueofavengers.herokuapp.com">Home
-              <span class="visually-hidden">(current)</span>
+            <a class="nav-link" href="https://leagueofavengers.herokuapp.com">Home
             </a>
           </li>
           <li class="nav-item">
@@ -51,7 +50,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://leagueofavengers.herokuapp.com/team">Meet the Team</a>
+            <a class="nav-link active" href="https://leagueofavengers.herokuapp.com/team">Meet the Team</a>
               <span class="visually-hidden">(current)</span>
           </li>
           <li class="nav-item">
@@ -186,7 +185,6 @@
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-<!-- <script src="style.css"></script> -->
 <script src="index.html"></script>
 
 
