--- a/templates/API.html
+++ b/templates/API.html
@@ -31,9 +31,9 @@
       </button>
   
       <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="https://leagueofavengers.herokuapp.com">Home
+            <a class="nav-link" href="https://leagueofavengers.herokuapp.com">Home
             </a>
           </li>
           <li class="nav-item">
@@ -141,7 +141,7 @@
     </div>
 </body>
 
-<footer class="page-footer font-small blue pt-4">
+<footer class="site-footer">
   <div class="container-fluid text-center text-md-left">
       <div class="row">
           <p class="text-white">We hope you had a Marvel-ous time!</p>
