--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -32,7 +32,7 @@
               </button>
           
               <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
                     <a class="nav-link active" href="https://leagueofavengers.herokuapp.com">Home
                     </a>
